--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: palevioletred;
+    background-color: #ffd700;
 
-    color: white;
+    color: #373737;
     font-family: "Roboto", sans-serif;
 
     letter-spacing: 2px;
@@ -51,7 +51,7 @@ body {
 
 a {
     text-decoration: none;
-    color: white;
+    color: #373737;
     transition: color 1s;
 }
 
@@ -79,17 +79,20 @@ a:hover {
     justify-content: center;
     margin-top: 15px;
     margin-bottom: 15px;
+    text-align: center;
 }
 
 .social-link {
+    text-align: center;
     font-size: 20px;
-    color: white;
+    color: #373737;
     transition: all 0.3s;
     border: 1px solid white;
     border-width: 2px;
     box-shadow: 2px 5px 10px 3px #373737;
     padding: 10px;
-    border-radius: 40px;
+    border-radius: 10px;
+    
 }
 
 #stars1 {
